--- a/src/static/joy.html
+++ b/src/static/joy.html
@@ -1,1 +1,5 @@
-<b>Cau</b>
+<div id="feedback"></div>
+<button onclick="sendJoyCommand('demo')">Demo set</button>
+<hr />
+<div id="positions"></div>
+<button onclick="getJoyData()">Read positions</button>
